@@ -27,6 +27,7 @@ Compilers:
   (Frédéric Bour, review by Gabriel Scherer)
 - PR#6737: fix Typedtree attributes on (fun x -> body) expressions
 - PR#6679: fix pprintast printing of constraints in type declarations
+- PR#6845: -no-check-prims to tell ocamlc not to check primitives in runtime
 - some cmm optimizations of integer operations with constants
   (Stephen Dolan, review by Pierre Chambart)
 
